# led-matrix

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
config/: config.json
modules/: CMakeLists.txt
scripts/: git_version_generator.py  load_build.sh  prebuild.sh  rc.local  socket_test.py  start.sh  template_gen.py
source/: CMakeLists.txt  config_parser.cpp  config_parser.h  config_parser.hpp  expected.h  expected.hpp  font.cpp  font.hpp  font_parser.cpp  font_parser.hpp  io_server.cpp  io_server.h  io_service.h  io_sinks.h  main.cpp  string_utilities.hpp  tasks.hpp
source/app/: config_parser.cpp  config_parser.hpp
source/app/clocks/: simple_clock.hpp
source/app/tasks/: cancellable_task.hpp  simple_clock_task.hpp
source/fonts/: character.cpp  character.hpp  font.cpp  font.hpp
source/graphics/: CMakeLists.txt  alignment.hpp  canvas.hpp  font_renderer.cpp  font_renderer.hpp  frame_buffer.hpp  graphics.hpp  origin.hpp  pixel.hpp  primatives.cpp  primatives.hpp  render.hpp  shape.hpp  text_box.cpp  text_box.hpp
source/graphics/clocks/: interval_timer.hpp
source/graphics/fonts/: character.cpp  character.hpp  font.cpp  font.hpp
source/graphics/matrix/: config_parser.cpp  config_parser.hpp  matrix.hpp
source/graphics/utilities/: expected.hpp  string_utilities.hpp
source/io/: io_service.h  io_service.hpp
source/reactive/: filter.h  filter.hpp  io_filter.h  io_sinks.h  io_transform.h  main.cpp  mtry.hpp  reactive.h  reactive.hpp  sinks.hpp  transform.h  transform.hpp
source/utilities/: ring_buffer.hpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  config_tests.cpp  expected_tests.cpp  font_parser_tests.cpp
test/font_parser/: font_parser_tests.cpp  font_tests.cpp
